# schwarzschild

./: .gitignore  CMakeLists.txt  README.md  build.sh  index.html  physics-worker.js  schwarzschild.html  schwarzschild.js  schwarzschild.wasm  shell.html  worker-manager.js
docs/: architecture.md  conventions.md  hamiltonian_derivation.md  physics_engine.md  visualization.md
src/app/: controls.cpp  controls.h  main.cpp  simulation_params.h  worker_bindings.cpp
src/numerics/: integrator.cpp  integrator.h  rk4.h
src/physics/: constants.h  hamiltonian.cpp  hamiltonian.h  metric.h  schwarzschild_metric.cpp  schwarzschild_metric.h
src/rays/: ray_bundle.cpp  ray_bundle.h  ray_initializer.cpp  ray_initializer.h  ray_state.h
src/render/: camera.cpp  camera.h  geometry.cpp  geometry.h  renderer.cpp  renderer.h
